--- a/src/app/components/TodosList/styles.module.scss
+++ b/src/app/components/TodosList/styles.module.scss
@@ -11,8 +11,12 @@
     display: grid;
     gap: 1rem;
 
-    @include tablet {
+    @include smartphone {
       grid-template-columns: 1fr;
+    }
+
+    @include tablet {
+      grid-template-columns: repeat(2, 1fr);
     }
 
     @include laptop {
@@ -25,6 +29,10 @@
 
     @include desktop-large {
       grid-template-columns: repeat(5, 1fr);
+    }
+
+    @include desktop-ultrawide-screen {
+      grid-template-columns: repeat(6, 1fr);
     }
   }
 
